force-app/main/default/objects/SIT_Agencies__c/SIT_Agencies__c.object-meta.xml
<CustomObject>
    <label>SIT Agencies</label>
    <nameField>
        <displayFormat>SIT-{0000}</displayFormat>
        <label>SIT Agencies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIT Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>