force-app/main/default/objects/SIT_Agencies__c/fields/Additional_Tax_Calculation_Nuances__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tax_Calculation_Nuances__c</fullName>
    <label>Additional Tax Calculation Nuances</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>