force-app/main/default/objects/SIT_Agencies__c/fields/Amended_1099_NEC_Filing_Format__c.field-meta.xml
<CustomField>
    <fullName>Amended_1099_NEC_Filing_Format__c</fullName>
    <label>Amended 1099-NEC Filing Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>Fixed Width</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>