force-app/main/default/objects/SIT_Agencies__c/fields/Amendment_Statute_of_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Statute_of_Limitations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Statute of Limitations</label>
    <type>Checkbox</type>
</CustomField>