force-app/main/default/objects/SIT_Agencies__c/fields/Box_14_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Box_14_Guidance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Box 14 Guidance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>