force-app/main/default/objects/SIT_Agencies__c/fields/Can_we_send_paper__c.field-meta.xml
<CustomField>
    <fullName>Can_we_send_paper__c</fullName>
    <label>Can we send paper?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>