force-app/main/default/objects/SIT_Agencies__c/fields/Closed_Year_Amendment_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Closed_Year_Amendment_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Year Amendment Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>