force-app/main/default/objects/SIT_Agencies__c/fields/Does_the_form_change_annually__c.field-meta.xml
<CustomField>
    <fullName>Does_the_form_change_annually__c</fullName>
    <label>Does the form change annually?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>