force-app/main/default/objects/SIT_Agencies__c/fields/Efile_Mandate_agency__c.field-meta.xml
<CustomField>
    <fullName>Efile_Mandate_agency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Efile Mandate Agency Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>