force-app/main/default/objects/SIT_Agencies__c/fields/File_Encryption_Requirements__c.field-meta.xml
<CustomField>
    <fullName>File_Encryption_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Encryption Requirements?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>