force-app/main/default/objects/SIT_Agencies__c/fields/Filing_Due_Date_s__c.field-meta.xml
<CustomField>
    <fullName>Filing_Due_Date_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filing Due Date(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>