force-app/main/default/objects/SIT_Agencies__c/fields/Final_W_2_req_for_closed_accounts__c.field-meta.xml
<CustomField>
    <fullName>Final_W_2_req_for_closed_accounts__c</fullName>
    <label>Final W-2 req. (for closed accounts)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>