force-app/main/default/objects/SIT_Agencies__c/fields/How_are_missing_TINs_treated__c.field-meta.xml
<CustomField>
    <fullName>How_are_missing_TINs_treated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How are missing TINs treated?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>