force-app/main/default/objects/SIT_Agencies__c/fields/How_far_back_can_you_amend__c.field-meta.xml
<CustomField>
    <fullName>How_far_back_can_you_amend__c</fullName>
    <label>How far back can you amend?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>