force-app/main/default/objects/SIT_Agencies__c/fields/IRS_CF_SF_notes__c.field-meta.xml
<CustomField>
    <fullName>IRS_CF_SF_notes__c</fullName>
    <label>IRS (CF/SF) notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>