force-app/main/default/objects/SIT_Agencies__c/fields/Mailing_address_for_form_payment__c.field-meta.xml
<CustomField>
    <fullName>Mailing_address_for_form_payment__c</fullName>
    <label>Mailing address for form &amp; payment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>