force-app/main/default/objects/SIT_Agencies__c/fields/Modifications_to_the_SSA_spec_notes__c.field-meta.xml
<CustomField>
    <fullName>Modifications_to_the_SSA_spec_notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modifications to the SSA spec notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>