force-app/main/default/objects/SIT_Agencies__c/fields/State_Exemption_Form_notes__c.field-meta.xml
<CustomField>
    <fullName>State_Exemption_Form_notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Exemption Form notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>