force-app/main/default/objects/SIT_Agencies__c/recordTypes/Annual_Filing_Reconciliation.recordType-meta.xml
<RecordType>
    <fullName>Annual_Filing_Reconciliation</fullName>
    <active>true</active>
    <label>Annual Filing (Reconciliation)</label>
</RecordType>