force-app/main/default/objects/SIT_Agencies__c/recordTypes/Employee_Withholding_Certificate.recordType-meta.xml
<RecordType>
    <fullName>Employee_Withholding_Certificate</fullName>
    <active>true</active>
    <label>Employee Withholding Certificate</label>
</RecordType>