force-app/main/default/objects/SIT_Agencies__c/recordTypes/Form_1099_NEC.recordType-meta.xml
<RecordType>
    <fullName>Form_1099_NEC</fullName>
    <active>true</active>
    <label>Form 1099-NEC</label>
</RecordType>