force-app/main/default/objects/SIT_Agencies__c/recordTypes/Form_W_2.recordType-meta.xml
<RecordType>
    <fullName>Form_W_2</fullName>
    <active>true</active>
    <label>Form W-2</label>
</RecordType>