force-app/main/default/objects/SIT_Agencies__c/recordTypes/General_SIT_Agency_Info.recordType-meta.xml
<RecordType>
    <fullName>General_SIT_Agency_Info</fullName>
    <active>true</active>
    <label>General SIT Agency Info</label>
</RecordType>